--- a/MyProject/templates/accounts/login.html
+++ b/MyProject/templates/accounts/login.html
@@ -8,12 +8,15 @@
                 <label for="inputLogin" class="form-label"> <h6 class="border-bottom p-2">Nazwa użytkownika lub e-mail</h6></label>
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="basic-addon1"><i class="fas fa-user"></i></span>
-                    <input id="inputLogin"type="text" class="form-control" name="username" aria-describedby="loginHelp" placeholder="np. test123 | test123@gmail.com">
+                    {{form.username}}
                 </div>
                 <label for="inputPassword" class="form-label"><h6 class="border-bottom p-2">Hasło</h6></label>
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="basic-addon1"><i class="fas fa-unlock"></i></span>
-                    <input id="inputPassword"type="password" class="form-control" name="password" placeholder="******">
+                    {{form.password}}
+                </div>
+                <div class="mb-3 d-flex justify-content-center">
+                    {{form.captcha}}
                 </div>
                 <div class="d-flex justify-content-center" role="group" aria-label="Basic example">
                     <button type="submit" class="btn btn-primary rounded-pill">Zaloguj się</button>
