--- a/MyProject/templates/accounts/register.html
+++ b/MyProject/templates/accounts/register.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
-
+{% block title %} Zarejestruj się {% endblock %}
 {% block main %}
+    <H1 class="text-center">Zarejestruj się</H1>
     {% block container %}
         <div class="cred-form border rounded border-3 shadow"> 
             <form action="" method=POST >
