--- a/MyProject/templates/base.html
+++ b/MyProject/templates/base.html
@@ -108,6 +108,7 @@
            {% endfor %}
          {% endif %}
           <div id="main">
+            <H1 class="text-center m-4">{% block header %} {% endblock header %}</H1>
               {% block main %}
                     {% block container %} {% endblock %} 
               {% endblock %}
