--- a/MyProject/templates/pets/profile.html
+++ b/MyProject/templates/pets/profile.html
@@ -3,6 +3,7 @@
 {% block title %}Profil zwierzęcia{% endblock %}
 
 {% block main %}
+    <H1 class="text-center">Profil zwierzęcia</H1>
     {% block container %}
         {% for item in all %}
             <section class=" profile rounded border border-3 shadow">
