--- a/MyProject/templates/accounts/login.html
+++ b/MyProject/templates/accounts/login.html
@@ -2,7 +2,7 @@
 {% block title %} Zaloguj się {% endblock %}
 
 {% block main %} 
-    <H1 class="text-center">Zaloguj się</H1>
+    <H1 class="text-center m-auto">Zaloguj się</H1>
     {% block container %}
         <div class="cred-form border rounded border-3 shadow">
             <form action="" method=POST>
