--- a/MyProject/templates/accounts/password_change.html
+++ b/MyProject/templates/accounts/password_change.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block main %}
-    <H1 class="text-center">Zmień hasło</H1>
+    <H1 class="text-center m-auto">Zmień hasło</H1>
     {% block container %}
         <div class="cred-form  border rounded border-3 shadow">
             <form action="" method=POST>
