--- a/MyProject/templates/accounts/profile_edit.html
+++ b/MyProject/templates/accounts/profile_edit.html
@@ -3,7 +3,7 @@
 {% block title %}Edytuj Profil{% endblock title %}
 
 {% block main %}
-    <H1 class="text-center">Edytuj Profil właściciela</H1>
+    <H1 class="text-center m-auto">Edytuj Profil właściciela</H1>
     {% block container %}
         <section class="u-prof-edit border rounded border-3 shadow">
             <form action="" method=POST>
