--- a/MyProject/templates/pets/edit_pet.html
+++ b/MyProject/templates/pets/edit_pet.html
@@ -4,7 +4,7 @@
 
 {% block main %}
     {% block container %}
-    {% comment %} <H1>Edytuj profil swojego pupila</H1> {% endcomment %}
+        <H1 class="text-center m-auto">Edytuj profil pupila</H1>
         <section class="p-prof-edit border rounded border-3 shadow">
             <form action="" method=POST enctype="multipart/form-data">
                 {% csrf_token %}
