--- a/MyProject/templates/template_parts/footer.html
+++ b/MyProject/templates/template_parts/footer.html
@@ -24,16 +24,7 @@
               Przydatne linki
             </h6>
             <p>
-              <a href="https://www.butcherspetcare.com/blog/czipowanie-psa-dlaczego-warto-czipowac-psy/" class="text-reset">Chipowanie</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Settings</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Orders</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Help</a>
+              <a href="https://www.dolina-noteci.pl/Chipowanie-kota-i-psa-ile-kosztuje-i-jakie-niesie-korzysci-blog-pol-1614324374.html" class="text-reset">Chipowanie</a>
             </p>
           </div>
           <!-- Grid column -->
