--- a/MyProject/staticfiles/css/style.css
+++ b/MyProject/staticfiles/css/style.css
@@ -79,6 +79,52 @@ div#main form{
     margin: 1em;
 }
 
+/*----------homepage-----------*/
+div.statistics {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin: auto;
+    width:auto;
+}
+div.stat-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    margin: auto;
+    width:auto;
+}
+
+div.stat-box {
+    text-align: center;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin: 1em;  
+    padding: 0 1rem 1rem;
+    margin-top: 3rem;
+    border-radius: 2rem ;
+    border: 2px solid white;
+    width: 22em;
+    background-color: rgb(235 235 235);
+    box-shadow: 
+    rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, 
+    rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+}
+div.stat-box:hover{
+    border: 2px solid black;
+}
+
+div.stat-box svg{
+    margin-top: 0.1em; 
+    margin-bottom: 0.1em; 
+}
+
+div.stat-box p{
+    text-decoration: wavy;
+    font-weight: 900;
+    font-size: 2rem;
+}
 
 /*--------my-pets & lost-pets--------*/
 div#pets-container {
@@ -86,23 +132,28 @@ div#pets-container {
     flex-direction: row;
     justify-content: center;
     margin: auto;
-    width:auto
+    width:100%;
     /*background-color: rgb(177, 207, 8);*/
 }
-
+div#pets-container .pet-btn-menu{
+    width:100%;
+    display: flex;
+    justify-content: space-between;
+}
 div#pets-container .pet-list{
     display: block;
     cursor: pointer;
-    width: auto;
+    width: 19em;
     height: auto;
     margin: 1em;
+    border: 1px solid white;
     border-radius: 1em;
     background-color: rgb(235 235 235); /*rgb(233 239 239);*/ /*Wcześniej był rgb(208, 216, 216);*/
     box-shadow: 
     rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, 
     rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
-    
 }
+
 
 div#pets-container .pet-list img{
     display: block;
@@ -267,32 +318,75 @@ section.p-prof-edit input{
 }
 /*----------About-----------*/
 .about{
-    display: inline-flex;
-    flex-direction: row;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
-    height: 50vh;
-    width: 100%;
-    background-color: #0d6efd;
+    width: 80%;
+    margin: auto;
+}
+article.about-art {
+    display: flex;
+    justify-items: center;
+    flex-direction: column;
+    margin: 3em;
+}
+article.about-art svg {
+   margin: auto;
+   font-size: 5.5em;
+   filter: drop-shadow(3px 5px 2px rgb(0 0 0 / 0.4));
 }
 
+/* article.about-art H5{
+    text-shadow: #e0e0e0 1px 1px 0;
+} */
+.about-top {
+    background-color: #f4a900;
+    width: auto;
+    height: auto;
+    margin: 1em;
+}
+.about-center{
+    display: flex;
+    flex-direction: row;
+    height: auto;
+    margin: 1em;
+}
+
+.about-left img{
+    box-shadow:
+    0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+    0 6.7px 5.3px rgba(0, 0, 0, 0.048),
+    0 12.5px 10px rgba(0, 0, 0, 0.06),
+    0 22.3px 17.9px rgba(0, 0, 0, 0.072),
+    0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+    0 100px 80px rgba(0, 0, 0, 0.12);
+    border: 2px solid lightgray;
+    margin: auto;
+    height: 50vh;
+}
 
 .about-left{
-    max-height: 50vh;
-    margin-left: auto;
-}
-.about-left img{
-    max-height: 50vh;
-    margin: auto;
-}
-.about-right{
     display: flex;
     justify-content: center;
-    background-color: #8ca0ff;
-    width: auto;
-    height: 50vh;
+
+    background-color: #e2ece9;
+    width: 50%;
+    height: 60vh;
     margin: auto;
 }
 
+.about-right{
+    background-color: #0ada9b;
+    width: 50%;
+    height: 60vh;
+    margin: auto;
+}
+
+.about-bottom {
+    background-color: #df4f0c;
+    height: auto;
+    margin: 1em;
+}
 /*----------Mobile Version-----------*/
 @media only screen and (max-width: 900px) { 
 
@@ -302,11 +396,25 @@ section.p-prof-edit input{
         width: auto;
         min-height: auto;
     }
+
     form#search-bar {
         width: 90%;
     }
+
     .alert {
         width: 90%;
+    }
+
+    div.statistics{
+        margin: auto;
+    }
+
+    div.stat-box {
+        width: 20em ;
+    }
+    
+    div.stat-container{
+        flex-direction: column;
     }
 
     div#pets-container {
@@ -358,10 +466,50 @@ section.p-prof-edit input{
         max-width: 100%;
     }
 
-    .about{
+    article.about-art {
         display: flex;
+        justify-items: center;
         flex-direction: column;
-        justify-content: center;
+        margin: 1.75em;
+    }
+
+    article.about-art svg {
+        font-size: 2.5em;
+        margin-top: 0;
+    }
+
+    .about{
+        width: 100%;
+    }
+
+    .about-top {
+        height: auto;
+    }
+
+    .about-center{
+        display: flexbox;
+        flex-direction: column;
+        height: auto;
+    }
+
+    .about-left{
+        margin-bottom: 1em;
+        width: 100%;
+        height: auto;
+    }
+
+    .about-left img{
+        margin: 2em;
+    }
+    
+    .about-right{
+        margin-top: 1em;
+        width: 100%;
+        height: auto;
+    }
+
+    .about-bottom {
+        height: auto;
     }
 }
 
@@ -391,4 +539,8 @@ textarea.form-control{
 
 .container {
     margin: auto;
+}
+
+H1 {
+    text-transform: uppercase;
 }
