--- a/MyProject/templates/accounts/profile.html
+++ b/MyProject/templates/accounts/profile.html
@@ -4,7 +4,7 @@
 {% block title %}Profil{% endblock title %}
 
 {% block main %}
-    <H1 class="text-center">Twój profil</H1> 
+    <H1 class="text-center m-auto">Twój profil</H1> 
         {% csrf_token %}
     {% block container %}
         <section class="profile border rounded border-3 shadow">
