--- a/MyProject/templates/index.html
+++ b/MyProject/templates/index.html
@@ -4,7 +4,7 @@
 {% block title %} Strona Główna {% endblock %}
    
 {% block main %}
-    <H1 class="text-center">Strona Główna</H1>
+    <H1 class="text-center m-auto">Strona Główna</H1>
     {% block container %}
         <p>Witaj na stronie bezpieczny zwierzak</p>
         <div class="statistics">
