--- a/MyProject/templates/pets/add_pet.html
+++ b/MyProject/templates/pets/add_pet.html
@@ -4,6 +4,7 @@
 
 {% block main %}
     {% block container %}
+        <H1 class="text-center m-auto">Dodaj nowe zwierzę</H1>
         <section class="p-prof-edit border rounded border-3 shadow">
             <form action="" method=POST enctype="multipart/form-data">
                 {% csrf_token %}
