--- a/MyProject/templates/pets/my_pets.html
+++ b/MyProject/templates/pets/my_pets.html
@@ -24,7 +24,7 @@
         </div>
     </div>
 
-    <H1 class="text-center">Twoje zwierzęta</H1>
+    <H1 class="text-center m-auto">Twoje zwierzęta</H1>
     
     {% if pet_page_obj == None %}
         <p>Aktualnie nie masz żadnych zwierząt</p>
