--- a/MyProject/staticfiles/css/style.css
+++ b/MyProject/staticfiles/css/style.css
@@ -79,7 +79,56 @@ div#main form{
     margin: 1em;
 }
 
+/*----------Footer-----------*/
+footer H6{
+    filter: drop-shadow(3px 5px 2px rgb(0 0 0 / 0.4));
+}
+
 /*----------homepage-----------*/
+
+#scroll-container {
+    overflow: hidden;
+}
+  
+#scroll-text {
+    text-align: right;
+  
+    /* animation properties */
+    -moz-transform: translateX(-100%);
+    -webkit-transform: translateX(-100%);
+    transform: translateX(-100%);
+    
+    -moz-animation: my-animation 15s linear infinite;
+    -webkit-animation: my-animation 15s linear infinite;
+    animation: my-animation 15s linear infinite;
+}
+  
+  /* for Firefox */
+@-moz-keyframes my-animation {
+    from { -moz-transform: translateX(-100%); }
+    to { -moz-transform: translateX(100%); }
+}
+  
+  /* for Chrome */
+@-webkit-keyframes my-animation {
+    from { -webkit-transform: translateX(-100%); }
+    to { -webkit-transform: translateX(100%); }
+}
+  
+@keyframes my-animation {
+    from {
+      -moz-transform: translateX(-100%);
+      -webkit-transform: translateX(-100%);
+      transform: translateX(-100%);
+    }
+    to {
+      -moz-transform: translateX(100%);
+      -webkit-transform: translateX(100%);
+      transform: translateX(100%);
+    }
+}
+
+
 div.statistics {
     display: flex;
     align-items: center;
@@ -118,6 +167,7 @@ div.stat-box:hover{
 div.stat-box svg{
     margin-top: 0.1em; 
     margin-bottom: 0.1em; 
+    filter: drop-shadow(3px 5px 2px rgb(0 0 0 / 0.4));
 }
 
 div.stat-box p{
@@ -307,6 +357,7 @@ section.p-prof-edit input{
 #p-profile-left img{
     max-width: 100%;
     height: auto;
+    filter: drop-shadow(3px 5px 2px rgb(0 0 0 / 0.4));
 }
 
 #p-profile-right {
@@ -363,6 +414,7 @@ article.about-art svg {
     border: 2px solid lightgray;
     margin: auto;
     height: 50vh;
+    
 }
 
 .about-left{
