--- a/MyProject/templates/index.html
+++ b/MyProject/templates/index.html
@@ -6,7 +6,9 @@
 {% block main %}
     <H1 class="text-center m-auto">Strona Główna</H1>
     {% block container %}
-        <p>Witaj na stronie bezpieczny zwierzak</p>
+        <div id="scroll-container">
+            <div id="scroll-text"><H4>Witaj na stronie Bezpieczny Zwierzak</H4></div>
+        </div>
         <div class="statistics">
             <H2>Statystyki</H2>
             <div class="stat-container">
