--- a/MyProject/templates/about.html
+++ b/MyProject/templates/about.html
@@ -19,7 +19,7 @@
                         </div>
                         <div class="about-right rounded">
                             <article class="about-art">
-                                <H5>Za cel obrano utworzenie witryny internetowej, która umożliwiałaby rejestrację zwierząt w bazie danych. Rejestracja Skutkowałaby utworzeniem profilu danego zwierzęcia.</H5>
+                                <H5>Za cel obrano utworzenie witryny internetowej, która umożliwiałaby rejestrację zwierząt w bazie danych. Rejestracja skutkowałaby utworzeniem profilu danego zwierzęcia.</H5>
                                 <H6>Uwzględniamy tutaj między innymi:</H6>
                                 <ul>   
                                     <li>numer mikroczipu</li>
