--- a/MyProject/templates/index.html
+++ b/MyProject/templates/index.html
@@ -7,7 +7,7 @@
     <H1 class="text-center m-auto">Strona Główna</H1>
     {% block container %}
         <div id="scroll-container">
-            <div id="scroll-text"><H4>Witaj na stronie Bezpieczny Zwierzak</H4></div>
+            <div id="scroll-text"><H4>Witaj na stronie bezpieczny zwierzak, zarejestruj swojego pupila w darmowej bazie już dziś !</H4></div>
         </div>
         <div class="statistics">
             <H2>Statystyki</H2>
