Fix - and clean code

--- a/MyProject/templates/about.html
+++ b/MyProject/templates/about.html
@@ -9,7 +9,13 @@
                 <section class="about">
                     <div class="about-top rounded">
                         <article class="about-art">
-                            <H5>Strona powstała w ramach pracy inżynynierskiej wykonanej pod kierunkiem <b>dr. hab. inż. Artura Barasińskiego</b>  w <b>Instytucie Fizyki Teoretycznej UWr Wrocław</b>.</H5>
+                            <H5>
+                                Strona powstała w ramach pracy 
+                                inżynynierskiej wykonanej pod kierunkiem
+                                <b>dr. hab. inż. Artura Barasińskiego</b>  
+                                w <b>Instytucie Fizyki Teoretycznej UWr 
+                                Wrocław</b>.
+                            </H5>
                             <i class="fas fa-university"></i>
                         </article>
                     </div>
@@ -19,8 +25,16 @@
                         </div>
                         <div class="about-right rounded">
                             <article class="about-art">
-                                <H5>Za cel obrano utworzenie witryny internetowej, która umożliwiałaby rejestrację zwierząt w bazie danych. Rejestracja skutkowałaby utworzeniem profilu danego zwierzęcia.</H5>
-                                <H6>Uwzględniamy tutaj między innymi:</H6>
+                                <H5>Za cel obrano utworzenie witryny 
+                                    internetowej, która umożliwiałaby 
+                                    rejestrację zwierząt w bazie danych. 
+                                    Rejestracja skutkowałaby 
+                                    utworzeniem profilu danego zwierzęcia.
+                                </H5>
+                                <H6>
+                                    Uwzględniamy tutaj między 
+                                    innymi:
+                                </H6>
                                 <ul>   
                                     <li>numer mikroczipu</li>
                                     <li>imię zwierzęcia</li>
@@ -34,13 +48,31 @@
                     </div>
                     <div class="about-bottom rounded">
                         <article class="about-art">
-                            <H5>Strona ma być swego rodzaju zabezpieczeniem dla właściciela danego zwierzęcia, w
-                                razie zaginięcia właściciel może ustawić w profilu swojego pupila status zagniniony.</H5> 
-                                <H5>Strona będzie ogólnodostępna dla każdego bez wyjątku, przez co mogłaby znacznie pomóc w odnajdywaniu właścicieli zwierząt, chociażby
-                                schroniskom - dane schronisko mogłoby w bardzo prosty sposób zlokalizować właściciela. </H5>
-                                <H5>Platforma ma być w pełni darmową alternatywą płatnych rozwiązań które możemy znaleźć obecnie w internecie.</H5>
+                            <H5>Strona ma być swego rodzaju 
+                                zabezpieczeniem dla właściciela 
+                                danego zwierzęcia, w
+                                razie zaginięcia właściciel może 
+                                ustawić w profilu swojego pupila 
+                                status zagniniony.
+                            </H5> 
+                            <H5>
+                                Strona będzie ogólnodostępna 
+                                dla każdego bez wyjątku, przez co 
+                                mogłaby znacznie pomóc w 
+                                odnajdywaniu właścicieli zwierząt, 
+                                chociażby schroniskom - dane 
+                                schronisko mogłoby w bardzo 
+                                prosty sposób zlokalizować 
+                                właściciela. 
+                            </H5>
+                            <H5>
+                                Platforma ma być w pełni darmową 
+                                alternatywą płatnych rozwiązań 
+                                które możemy znaleźć obecnie w 
+                                internecie.
+                            </H5>
                                 <i class="fas fa-shield-alt"></i>
-                            </article>
+                        </article>
                     </div>
                 </section>
             {% endblock %} 
