--- a/MyProject/templates/accounts/password_change.html
+++ b/MyProject/templates/accounts/password_change.html
@@ -6,26 +6,36 @@
         <div class="cred-form  border rounded border-3 shadow">
             <form action="" method=POST>
                 {% csrf_token %}
-                <label for="changePassword1" class="form-label"><h6 class="border-bottom p-2">Hasło</h6></label>
+                <label for="changePassword1" class="form-label">
+                    <h6 class="border-bottom p-2">Hasło</h6>
+                </label>
                     <div class="input-group mb-3">
-                        <span class="input-group-text" id="basic-addon1"><i class="fas fa-lock"></i></span>
+                        <span class="input-group-text" id="basic-addon1">
+                            <i class="fas fa-lock"></i>
+                        </span>
                         {{ form.new_password1 }}
                     </div>
-                <label for="changePassword1" class="form-label">Nowe Hasło: </label>
+                <label for="changePassword1" class="form-label">Nowe Hasło:</label>
                 <ul>
                     <li>Twoje hasło nie powinno pokrywać się z Twoimi danymi </li>
                     <li>Twoje hasło powinno się składać z minimum 8 znaków</li>
                     <li>Twoje hasło nie powinno być zbyt powszechne</li>
                     <li>Twoje hasło nie powinno zawierać samych cyfr</li>
                 </ul>
-                <label for="changePassword2" class="form-label"><h6 class="border-bottom p-2">Powtórz Hasło</h6></label>
+                <label for="changePassword2" class="form-label">
+                    <h6 class="border-bottom p-2">Powtórz Hasło</h6>
+                </label>
                     <div class="input-group mb-3">
-                        <span class="input-group-text" id="basic-addon1"><i class="fas fa-lock"></i></span>
+                        <span class="input-group-text" id="basic-addon1">
+                            <i class="fas fa-lock"></i>
+                        </span>
                         {{ form.new_password2 }}
                     </div>
                 <p>Oba hasła musza się zgadzać</p>
                 <div class="d-flex justify-content-center" role="group" aria-label="Basic example">
-                    <button type="submit" class="btn btn-primary rounded-pill">Zmień Hasło</button>
+                    <button type="submit" class="btn btn-primary rounded-pill">
+                        Zmień Hasło
+                    </button>
                 </div>
             </form>
         </div>
