--- a/MyProject/templates/accounts/login.html
+++ b/MyProject/templates/accounts/login.html
@@ -7,24 +7,38 @@
         <div class="cred-form border rounded border-3 shadow">
             <form action="" method=POST>
                 {% csrf_token %}
-                <label for="inputLogin" class="form-label"> <h6 class="border-bottom p-2">Nazwa użytkownika lub e-mail</h6></label>
+                <label for="inputLogin" class="form-label"> 
+                    <h6 class="border-bottom p-2">
+                        Nazwa użytkownika lub e-mail
+                    </h6>
+                </label>
                 <div class="input-group mb-3">
-                    <span class="input-group-text" id="basic-addon1"><i class="fas fa-user"></i></span>
+                    <span class="input-group-text" id="basic-addon1">
+                        <i class="fas fa-user"></i>
+                    </span>
                     {{form.username}}
                 </div>
-                <label for="inputPassword" class="form-label"><h6 class="border-bottom p-2">Hasło</h6></label>
+                <label for="inputPassword" class="form-label">
+                    <h6 class="border-bottom p-2">Hasło</h6>
+                </label>
                 <div class="input-group mb-3">
-                    <span class="input-group-text" id="basic-addon1"><i class="fas fa-unlock"></i></span>
+                    <span class="input-group-text" id="basic-addon1">
+                        <i class="fas fa-unlock"></i>
+                    </span>
                     {{form.password}}
                 </div>
                 <div class="mb-3 d-flex justify-content-center">
                     {{form.captcha}}
                 </div>
                 <div class="d-flex justify-content-center" role="group" aria-label="Basic example">
-                    <button type="submit" class="btn btn-primary rounded-pill">Zaloguj się</button>
+                    <button type="submit" class="btn btn-primary rounded-pill">
+                        Zaloguj się
+                    </button>
                 </div>
                 <div class="text-center">
-                    <p>Nie masz konta? <a href="{%url 'register'%}">Zarejestruj się</a></p>
+                    <p>Nie masz konta? 
+                        <a href="{%url 'register'%}">Zarejestruj się</a>
+                    </p>
                 </div>
             </form>
         </div>
