--- a/MyProject/templates/accounts/profile.html
+++ b/MyProject/templates/accounts/profile.html
@@ -44,8 +44,12 @@
                     
                 </div>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-center">
-                    <a class="btn btn-primary" href="{%url 'profile_edit' %}" role="button"><i class="fas fa-edit"></i> Edytuj</a>
-                    <a class="btn btn-primary" href="{%url 'password_change' %}" role="button"><i class="fas fa-lock"></i> Zmień hasło</a>
+                    <a class="btn btn-primary" href="{%url 'profile_edit' %}" role="button">
+                        <i class="fas fa-edit"></i> Edytuj
+                    </a>
+                    <a class="btn btn-primary" href="{%url 'password_change' %}" role="button">
+                        <i class="fas fa-lock"></i> Zmień hasło
+                    </a>
                 </div>
             </div>
         </section>
